--- a/maquette.css
+++ b/maquette.css
@@ -1,8 +1,160 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@300&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Abril+Fatface&display=swap');
+/*corps de page*/
+body{
+    margin-left: 250px;
+    margin-right: 250px;
+}
 
-/*Section*/
-h4{
+p{
+    text-align: justify;
+}
+
+/*header*/
+h1, h2, h3{
+   color: rgba(0, 255, 255, 0.753);
+}
+
+/*Section 1*/
+.fond{
+    position: relative;
+    top: 130px;
+    font-size: 100px;
+    opacity: 0.1;
+    font-family: 'Abril Fatface', cursive;
+    letter-spacing: 7px;
+    color: #232C70;
+}
+
+h1
+{
     display: flex;
     justify-content: center;
     font-family: 'Montserrat', sans-serif;
+    font-size: 20px;
+    color: grey;
+}
+
+b{
+    color: rgba(0, 255, 255, 0.753);
+}
+
+.titre2{
+    color: black;
+}
+
+.container, .container2{
+    display: flex;
+    align-content: center;
+    flex-wrap: wrap;
+}
+
+.wrapper{
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-gap: 50px;
+    grid-auto-rows: minmax(100px, auto);
+    position: relative;
+    left: 300px;
+}
+
+.menu1{
+    grid-column: 1;
+    grid-row: 1;
+}
+
+.menu2{
+    grid-column: 2 / 4;
+}
+
+.menu3{
+    grid-column: 1;
+}
+
+img{
+    width: 200px;
+    height: 230px;
+    opacity: 0.95;
+    position: relative;
+    left: 30px;
+    top: 33px;
+    filter: grayscale(90%);
+    -webkit-filter: grayscale(90%);
+    -moz-filter: grayscale(90%);
+    -ms-filter: grayscale(90%);
+    -o-filter: grayscale(90%);
+    cursor: pointer;
+}
+
+img:hover
+{
+    filter: grayscale(0%);
+    -webkit-filter: grayscale(0%);
+    -moz-filter: grayscale(0%);
+    -ms-filter: grayscale(0%);
+    -o-filter: grayscale(0%);
+    z-index: 7;
+}
+
+.icone{
+    width: 30px;
+    height: 30px;
+}
+
+.bandeau{
+    background-color: #232C70;
+    width: 80px;
+    height: 300px;
+}
+
+/*section 2*/
+.portfolio{
+    background-color: #FBFBFB;
+    
+}
+
+.wrapper2{
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-gap: 10px;
+}
+
+.menu5, .menu6, .menu7{
+    display: grid;
+    position: relative;
+    left: 150px;
+}
+
+.image2{
+    grid-auto-rows: auto;
+}
+
+text{
+    position: relative;
+    top: 150px;
+}
+
+.bouton{
+    display: flex;
+    justify-content: center;
+}
+
+button{
+    text-align: center;
+    background: none;
+    border: 2px solid black;
+    cursor: pointer;
+    font-size: 20px;
+}
+
+button:hover{
+    border: 2px solid #3B77E1;
+    cursor: pointer;
+    font-size: 20px;
+    letter-spacing: 3px;
+    font-size: 25px;
+}
+
+.imgportfolio{
+    width: 350px;
 }
