--- a/maquette.css
+++ b/maquette.css
@@ -1,236 +1,370 @@
-@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@300&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Abril+Fatface&display=swap');
-
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@300&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Abril+Fatface&display=swap");
 
 /*corps de page*/
 
-body{
-    margin-left: 250px;
-    margin-right: 250px;
-    flex-wrap: wrap;
+body {
+  margin: 0;
+  padding: 0;
+  margin-left: 250px;
+  margin-right: 250px;
+  flex-wrap: wrap;
+  justify-content: center;
 }
 
-section{
-    margin-top: -30px;
+section {
+  margin-top: -30px;
+  
 }
 
-.services{
-    height: 750px;
+.services {
+  height: 750px;
 }
 
 /*navigation*/
 
-.navcontainer{
-    display: flex;
+.navcontainer {
+  display: flex;
 }
 
-.logohamb{
-    justify-content: space-between;
-    width: 1162px;
+.logohamb {
+  justify-content: space-between;
+  width: 1162px;
 }
 
 /*header*/
 
-header{
-    display: flex;
-    background-image: url(images/Fd.png);
-    background-size: cover;
-    height: 400px;
-    justify-content: center;
-    text-align: center;
+header {
+  display: flex;
+  background-image: url(images/Fd.png);
+  background-size: cover;
+  height: 400px;
+  justify-content: center;
+  text-align: center;
+  width: 1300px;
 }
 
-.wrapper0{
-    flex-direction: column;
+.wrapper0 {
+  flex-direction: column;
 }
 
-.hamburger{
-    text-align: end;
-    justify-content: flex-end;
+.hamburger {
+  text-align: end;
+  justify-content: flex-end;
 }
 
-.titre{
-   color: rgba(0, 255, 255, 1);
-   flex-direction: column;
-   justify-content: center;
-   font-size: 80px;
-   font-family: 'Abril Fatface', cursive;
+.titre {
+  color: rgba(0, 255, 255, 1);
+  flex-direction: column;
+  justify-content: center;
+  font-size: 80px;
+  font-family: "Abril Fatface", cursive;
 }
 
-.weleon{
-    color: white;
+.weleon {
+  color: white;
 }
 
-.menuicons{
-    display: flex;
+.menuicons {
+  display: flex;
 }
 
-.menucontainer{
-    display: flex;
-    width: 1200px;
-    justify-content: center;
+.menucontainer {
+  display: flex;
+  width: 1200px;
+  justify-content: center;
 }
 
-.menuwrapper{
-    display: flex;
+.menuwrapper {
+  display: flex;
 }
 
-.headericons{
-    justify-content: center;
+.headericons {
+  justify-content: center;
 }
 
-.symboles{
-    font-size: 40px;
-    color: rgba(0, 255, 255, 1);
+.symboles {
+  font-size: 40px;
+  color: rgba(0, 255, 255, 1);
 }
 
 /*Section 1*/
 
-.fond{
+.fond {
+  position: relative;
+  top: 130px;
+  font-size: 100px;
+  opacity: 0.1;
+  font-family: "Abril Fatface", cursive;
+  letter-spacing: 7px;
+  color: #232c70;
+}
+
+h1 {
+  display: flex;
+  justify-content: center;
+  font-family: "Montserrat", sans-serif;
+  font-size: 20px;
+  color: grey;
+}
+
+b {
+  color: rgba(0, 255, 255, 0.753);
+}
+
+.titre2 {
+  color: black;
+}
+
+.container,
+.container2 {
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+}
+
+.wrapper {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  grid-gap: 25px;
+  grid-auto-rows: minmax(100px, auto);
+}
+
+.menu1,
+.menu2,
+.menu3,
+.menu4{
+    justify-content: center;
+}
+
+.menu1 {
+  grid-column: 1;
+  grid-row: 1;
+}
+
+.menu2 {
+  grid-column: 2 / 4;
+}
+
+.menu3 {
+  grid-column: 1;
+}
+
+img {
+  width: 200px;
+  height: 230px;
+  opacity: 0.95;
+  position: relative;
+  left: 30px;
+  top: 33px;
+  filter: grayscale(90%);
+  -webkit-filter: grayscale(90%);
+  -moz-filter: grayscale(90%);
+  -ms-filter: grayscale(90%);
+  -o-filter: grayscale(90%);
+  cursor: pointer;
+}
+
+img:hover {
+  filter: grayscale(0%);
+  -webkit-filter: grayscale(0%);
+  -moz-filter: grayscale(0%);
+  -ms-filter: grayscale(0%);
+  -o-filter: grayscale(0%);
+  z-index: 7;
+}
+
+.bandeau {
+  background-color: #232c70;
+  width: 80px;
+  height: 300px;
+}
+
+/*section 2*/
+
+.portfolio {
+  background-color: #fbfbfb;
+}
+
+.portfolio p {
+  text-align: justify;
+}
+
+.container2{
+    display: flex;
+}
+
+.wrapper2 {
+  display: flex;
+  width: 1300px;
+  justify-content: center;
+}
+
+.menu5,
+.menu6,
+.menu7 {
+  justify-content: center;
+  text-align: center;
+}
+
+.bouton {
+  display: flex;
+  justify-content: center;
+}
+
+button {
+  text-align: center;
+  background: none;
+  border: 2px solid black;
+  cursor: pointer;
+  font-size: 20px;
+}
+
+button:hover {
+  border: 2px solid #3b77e1;
+  cursor: pointer;
+  font-size: 20px;
+  letter-spacing: 3px;
+  font-size: 25px;
+}
+
+.imgportfolio {
+  width: 300px;
+}
+
+/*responsive*/
+@media all and (max-width: 1024px) {
+  body {
+    margin: 0px;
+    padding: 0px;
+    width: 1200px;
+  }
+
+  header {
+    background-color: white;
+    width: 1200px;
+    height: 700px;
+  }
+
+  .titre {
+    color: rgba(0, 255, 255, 1);
+    flex-direction: column;
+    justify-content: center;
+    font-size: 180px;
+    font-family: "Abril Fatface", cursive;
+  }
+
+  .weleon {
+    color: white;
+    font-size: 60px;
+  }
+
+  .symboles {
+    font-size: 150px;
+  }
+
+  h1 {
+    font-size: 60px;
+  }
+
+  .menuwrapper {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    font-size: 50px;
+    width: 1200px;
+    text-align: center;
+  }
+
+  .headericons {
+    box-shadow: 0px 30px 50px rgba(0, 255, 255, 1);
+  }
+
+  .bandeau {
+    display: none;
+  }
+
+  .fond {
     position: relative;
     top: 130px;
     font-size: 100px;
     opacity: 0.1;
-    font-family: 'Abril Fatface', cursive;
+    font-family: "Abril Fatface", cursive;
     letter-spacing: 7px;
-    color: #232C70;
-}
+    color: #232c70;
+  }
 
-h1
-{
-    display: flex;
-    justify-content: center;
-    font-family: 'Montserrat', sans-serif;
-    font-size: 20px;
-    color: grey;
-}
+  .soustitre {
+    display: none;
+  }
 
-b{
+  b {
     color: rgba(0, 255, 255, 0.753);
-}
+    font-size: 40px;
+  }
 
-.titre2{
+  .titre2 {
     color: black;
-}
+  }
 
-.container, .container2{
+  .container,
+  .container2 {
     display: flex;
     align-content: center;
     flex-wrap: wrap;
-}
+  }
 
-.wrapper{
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    grid-gap: 50px;
-    grid-auto-rows: minmax(100px, auto);
-    position: relative;
+  .wrapper {
+    display: flex;
     left: 300px;
-}
+    flex-direction: column;
+  }
 
-.menu1{
-    grid-column: 1;
-    grid-row: 1;
-}
+  .menu1,
+  .menu2,
+  .menu3,
+  .menu4 {
+    display: flex;
+    justify-content: center;
+    text-align: center;
+    font-size: 60px;
+    flex-direction: column;
+    width: 800px;
+  }
 
-.menu2{
-    grid-column: 2 / 4;
-}
+  .montagne {
+    display: none;
+  }
 
-.menu3{
-    grid-column: 1;
-}
-
-img{
+  img {
     width: 200px;
     height: 230px;
     opacity: 0.95;
     position: relative;
     left: 30px;
     top: 33px;
-    filter: grayscale(90%);
-    -webkit-filter: grayscale(90%);
-    -moz-filter: grayscale(90%);
-    -ms-filter: grayscale(90%);
-    -o-filter: grayscale(90%);
-    cursor: pointer;
-}
-
-img:hover
-{
     filter: grayscale(0%);
     -webkit-filter: grayscale(0%);
     -moz-filter: grayscale(0%);
     -ms-filter: grayscale(0%);
     -o-filter: grayscale(0%);
-    z-index: 7;
-}
+    cursor: pointer;
+  }
 
-.icone{
-    width: 30px;
-    height: 30px;
-}
+  nav {
+    display: none;
+  }
 
-.bandeau{
-    background-color: #232C70;
-    width: 80px;
-    height: 300px;
-}
-
-/*section 2*/
-
-.portfolio{
-    background-color: #FBFBFB;  
-}
-
-.portfolio p{
-    text-align: justify;
-}
-
-.wrapper2{
-    display: flex;
-    
-}
-
-.menu5, .menu6, .menu7{
-    justify-content: center;
-    text-align: center;
+  .fond {
+    width: 1200px;
+    font-size: 250px;
+    opacity: 0.5;
     position: relative;
-    left: 150px;
-}
-
-.bouton{
-    display: flex;
-    justify-content: center;  
-}
-
-button{
-    text-align: center;
-    background: none;
-    border: 2px solid black;
-    cursor: pointer;
-    font-size: 20px;
-}
-
-button:hover{
-    border: 2px solid #3B77E1;
-    cursor: pointer;
-    font-size: 20px;
-    letter-spacing: 3px;
-    font-size: 25px;
-}
-
-.imgportfolio{
-    width: 300px;
-}
-
-/*responsive*/
-
-@media screen and (max-width: 600px) {
-    body{
-        margin: 0;
-        padding: 0;
-    }
+    top: 0;
+    font-family: "Abril Fatface", cursive;
+    letter-spacing: 7px;
+    color: #232c70;
+  }
 }
 
 #notebook {
