--- a/maquette.css
+++ b/maquette.css
@@ -367,32 +367,57 @@ button:hover {
   }
 }
 
+/*footer*/
+
+
+
 #notebook {
-	
-background-image:url(footer.jpeg);
-top: 1350px;
-left: 500px;
-width :468px;
-height: 200px;
-	
+    background-image: url(footer.jpeg);
+  width: 80px;
+  height: 100px;
+  border: 1px solid #000;
 	
 }
-
 
 #gaa{
-   height:25px;
+
+   height:29px;
    width:100%;
    background-color:black;
+   position: relative;
+   top: 353px;
 }
 
+#mail {
+
+color: rgba(0, 255, 255, 1);
+   font-size: 30px;
+   font-weight: bold;
+   position: absolute;
+   top: 3183px;
+   left: 465px;
+
+	}
+
+
+#network {
+
+   font-size: 16px;
+   position: absolute;
+   top: 3249px;
+   left: 465px;
+
+	}
 #rights {
 	
 	
-color: white;
+color: red;
 font-size:15px;
 position: absolute;
-top: 3015px;
+top: 3299px;
 left: 650px;
+
+}
     
     
     h4 {
@@ -408,3 +433,29 @@ left: 650px;
 
 }
 
+
+#contact {
+	   font-size: 35px;
+   font-weight: bold;
+   position: absolute;
+   top: 3145px;
+   left: 450px;
+   color: #304E4A;
+
+
+	
+	
+	
+}
+
+#filigranecontact {
+	
+	position: relative;
+    top: 70px;
+    font-size: 89px;
+    opacity: 0.1;
+    font-family: 'Abril Fatface', cursive;
+    letter-spacing: 7px;
+    color: #232C70;
+	
+}
