--- a/maquette.css
+++ b/maquette.css
@@ -373,16 +373,17 @@ button:hover {
 
 #notebook {
     background-image: url(footer.jpeg);
-  width: 80px;
-  height: 100px;
-  border: 1px solid #000;
+  /*width: 100%;
+  height: 100%;*/
+  margin-left:150px;
 	
 }
+	
 
 #gaa{
 
    height:29px;
-   width:100%;
+   width:120%;
    background-color:black;
    position: relative;
    top: 353px;
@@ -414,10 +415,11 @@ color: rgba(0, 255, 255, 1);
 color: red;
 font-size:15px;
 position: absolute;
-top: 3299px;
+top: 3446px;
 left: 650px;
 
 }
+
     
     
     h4 {
