--- a/maquette.css
+++ b/maquette.css
@@ -241,10 +241,10 @@ button:hover {
 /*footer*/
 
 #notebook {
-    background-image: url(footer.jpeg);
-  /*width: 100%;
-  height: 100%;*/
-  margin-left:150px;
+    /*background-image: url(footer.jpeg);
+  width: 100%;
+  height: 100%;
+  margin-left:150px;*/
 	
 }
 
@@ -440,4 +440,42 @@ h4 {
     letter-spacing: 7px;
     color: #232c70;
   }
+}
+.book {
+
+    display: flex;
+      justify-content: center;
+  align-items: center;
+    
+}
+.container3 {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+}
+
+.wrapper3
+{
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+
+.container4 {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+}
+
+
+.wrapper4 {
+
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+
+
 }
